force-app/main/messaging/objects/ConversationMember__c/ConversationMember__c.object-meta.xml
<CustomObject>
    <label>Conversation Member</label>
    <pluralLabel>Conversation Members</pluralLabel>
    <description>Junction object between conversations and Users/Contacts</description>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Conversation Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 