force-app/main/messaging/objects/ConversationMember__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The contact who is a member of this conversation</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ConversationMembers</relationshipName>
    <type>Lookup</type>
</CustomField> 