force-app/main/messaging/objects/ConversationMember__c/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <description>The conversation this member belongs to</description>
    <label>Conversation</label>
    <referenceTo>Conversation__c</referenceTo>
    <relationshipLabel>Conversation Members</relationshipLabel>
    <relationshipName>ConversationMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField> 