force-app/main/messaging/objects/ConversationMember__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>The user who is a member of this conversation</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ConversationMembers</relationshipName>
    <type>Lookup</type>
</CustomField> 